Bug 24343 - Some syscall.*.return missing name and retstr variables
Summary: Some syscall.*.return missing name and retstr variables
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: tapsets (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Sagar Patel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-14 15:23 UTC by William Cohen
Modified: 2019-05-29 17:06 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description William Cohen 2019-03-14 15:23:43 UTC
When reviewing test results noticed that /testsuite/systemtap.examples/process/strace.stp had the following warning:

WARNING: never-assigned local variable 'retstr' (similar: argstr, status, name, _target_set, thread_argstr): identifier 'retstr' at strace.stp:49:38
 source:     report(name,thread_argstr[tid()],retstr)
 
Noticed that a number of the syscall.*.return and nd_syscall.*.return are missing retstr variable.  Below is the list from x86_64 of syscalls missing retstr.

$ stap -L 'syscall.*.return' |grep -v retstr
syscall.accept.return
syscall.accept4.return
syscall.bind.return
syscall.compat_signalfd.return _entry_tvar_tid:long
syscall.compat_sys_msgctl.return _entry_tvar_tid:long
syscall.compat_sys_msgrcv.return _entry_tvar_tid:long
syscall.compat_sys_msgsnd.return _entry_tvar_tid:long
syscall.compat_sys_recvmsg.return _entry_tvar_tid:long
syscall.compat_sys_semctl.return _entry_tvar_tid:long
syscall.compat_sys_semtimedop.return _entry_tvar_tid:long
syscall.compat_sys_sendmsg.return _entry_tvar_tid:long
syscall.compat_sys_shmat.return _entry_tvar_tid:long
syscall.compat_sys_shmctl.return _entry_tvar_tid:long
syscall.connect.return
syscall.epoll_create.return _entry_tvar_tid:long
syscall.getpeername.return
syscall.getsockname.return
syscall.getsockopt.return
syscall.listen.return
syscall.msgget.return
syscall.pipe.return _entry_tvar_tid:long
syscall.recv.return
syscall.recvfrom.return
syscall.recvmsg.return
syscall.semget.return
syscall.semop.return
syscall.send.return
syscall.sendmmsg.return
syscall.sendmsg.return
syscall.sendto.return
syscall.setsockopt.return
syscall.shmdt.return
syscall.shmget.return
syscall.shutdown.return
syscall.signalfd.return _entry_tvar_tid:long
syscall.socket.return
syscall.socketpair.return
syscall.wait4.return _entry_tvar_tid:long

Some are syscall.*.return also missing name variable:

$  stap -L "syscall.*.return"|grep -v name
syscall.accept.return
syscall.accept4.return
syscall.bind.return
syscall.compat_signalfd.return _entry_tvar_tid:long
syscall.compat_sys_msgctl.return _entry_tvar_tid:long
syscall.compat_sys_msgrcv.return _entry_tvar_tid:long
syscall.compat_sys_msgsnd.return _entry_tvar_tid:long
syscall.compat_sys_recvmsg.return _entry_tvar_tid:long
syscall.compat_sys_semctl.return _entry_tvar_tid:long
syscall.compat_sys_semtimedop.return _entry_tvar_tid:long
syscall.compat_sys_sendmsg.return _entry_tvar_tid:long
syscall.compat_sys_shmat.return _entry_tvar_tid:long
syscall.compat_sys_shmctl.return _entry_tvar_tid:long
syscall.connect.return
syscall.epoll_create.return _entry_tvar_tid:long
syscall.getsockopt.return
syscall.listen.return
syscall.msgget.return
syscall.pipe.return _entry_tvar_tid:long
syscall.recv.return
syscall.recvfrom.return
syscall.recvmsg.return
syscall.semget.return
syscall.semop.return
syscall.send.return
syscall.sendmmsg.return
syscall.sendmsg.return
syscall.sendto.return
syscall.setsockopt.return
syscall.shmdt.return
syscall.shmget.return
syscall.shutdown.return
syscall.signalfd.return _entry_tvar_tid:long
syscall.socket.return
syscall.socketpair.return
syscall.wait4.return _entry_tvar_tid:long
Comment 1 Sagar Patel 2019-05-29 17:06:45 UTC
Fixed in commit 4f4f173ad325b2e2e6228a2fd109953769a7d905.